Fix alignment on organisation table header

--- a/src/SFA.DAS.EAS.Web/src/sass/_tables.scss
+++ b/src/SFA.DAS.EAS.Web/src/sass/_tables.scss
@@ -8,6 +8,7 @@ table {
     }
 }
 
+th.link-right,
 td.link-right {
     text-align: right;
     padding-right: 0;
